<resources>
    <string name="app_name">Android Tutorial</string>
    <string name="buttonLecture2">Lecture 2</string>
    <string name="buttonLecture3">Lecture 3</string>
    <string name="buttonSend">Send</string>
    <string name="buttonLecture4">Lecture 4</string>
    <string name="buttonStart">Start</string>
    <string name="buttonStop">Stop</string>
    <string name="buttonReset">Reset</string>
    <string name="buttonLecture5">Lecture 5</string>
    <string name="editTextMessage">Message</string>
    <string name="editTextTo">To</string>
    <string name="buttonSendLecture5">Send</string>
    <string name="textviewScroll">this is a test string for scrollview. This is just some texts. nothing else.</string>
    <string name="buttonLecture6">Lecture 6</string>

    <string-array name="market_items">
        <item>milk</item>
        <item>bread</item>
        <item>egg</item>
    </string-array>

    <string-array name="top_level_options">
        <item>Drinks</item>
        <item>Food</item>
        <item>Stores</item>
    </string-array>

    <string name="create_order">Create Order</string>
    <string name="create_order_title">Create Order</string>
    <string name="action_share">Share</string>
    <string name="buttonLecture8">Lecture 8, 9</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workout_title">Workout Title</string>
    <string name="workout_description">Workout Description</string>
    <string name="buttonLecture10">Lecture 10, 11</string>

    <string name="home_tab">Home</string>
    <string name="pizza_tab">Pizzas</string>
    <string name="pasta_tab">Pastas</string>
    <string name="store_tab">Stores</string>
    <string name="top_fragment_text">Welcome Home!</string>
    <string name="restaurant_image">Restaurant image collected from CNN site</string>
    <string name="lecture10_app_name">FoodyBuddy</string>
    <string name="order_name_hint">Please add order name</string>
    <string name="order_details_hint">Please add order details</string>
</resources>
