<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lecture4Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="243dp"
        tools:layout_editor_absoluteY="199dp">

        <TextView
            android:id="@+id/textViewStopwatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="TextView"
            android:textSize="56sp"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/buttonStart"
            android:layout_marginTop="20dp"
            android:onClick="onClickStart"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/buttonStop"
            android:layout_marginTop="20dp"
            android:onClick="onClickStop"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/buttonReset"
            android:layout_marginTop="20dp"
            android:onClick="onClickReset"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>