<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lecture5Activity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:layout_editor_absoluteY="59dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/sky"
            android:scaleType="centerCrop"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="0dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="top|left"
                android:inputType="textPersonName"
                android:text="@string/editTextTo"
                />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="0dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="top"
                android:inputType="textPersonName"
                android:text="@string/editTextMessage" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="Password"/>

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ToggleButton"
                android:textOn="Beast"
                android:textOff="Human"
                android:onClick="onToggleButtonClicked"
                android:layout_gravity="right"
                />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Switch"
                android:textOn="Male"
                android:textOff="Female"
                android:onClick="onClickSwitch"
                />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Accept"
                android:onClick="onCheckBoxClick"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <RadioButton
                    android:id="@+id/radioButtonChoice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Choice 1"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radioButtonChoice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Choice 2" />
            </RadioGroup>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/market_items"
                />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:height="0dp"
                android:text="@string/buttonSendLecture5" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textviewScroll" />

                </LinearLayout>
            </ScrollView>


        </LinearLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>